ejbca-common: fix eclipse errors