@@ -136,9 +136,11 @@ public class PublisherQueueVolatileInformation extends UpgradeableDataHashMap im
       return clone;
     }
 
-    /** Function required by XMLEncoder to do a proper serialization. */
+    /** Function required by XMLEncoder to do a proper serialization. 
+     * @param hmData data*/
     public void setData( Object hmData ) { loadData(hmData); }
-    /** Function required by XMLEncoder to do a proper serialization. */
+    /** Function required by XMLEncoder to do a proper serialization. 
+     * @return Object */
     public Object getData() {return saveData();}
     
     /** Implementation of UpgradableDataHashMap function getLatestVersion */
@@ -151,10 +153,10 @@ public class PublisherQueueVolatileInformation extends UpgradeableDataHashMap im
     public void upgrade(){
     	if(Float.compare(LATEST_VERSION, getVersion()) != 0) {
     		// New version of the class, upgrade
-			String msg = intres.getLocalizedMessage("publisher.queuedataupgrade", new Float(getVersion()));
+			String msg = intres.getLocalizedMessage("publisher.queuedataupgrade", Float.valueOf(getVersion()));
             log.info(msg);
     		
-    		data.put(VERSION, new Float(LATEST_VERSION));
+    		data.put(VERSION, Float.valueOf(LATEST_VERSION));
     	}
     }
     
