@@ -126,7 +126,7 @@ public class EnhancedEIDProfile extends EIDProfile {
 	  				        
 
 	/** 
-	 * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#isTokenSupported(java.lang.String)
+	 * @see org.ejbca.core.model.hardtoken.profiles.HardTokenProfile#isTokenSupported(java.lang.String)
 	 */
 	public boolean isTokenSupported(String tokenidentificationstring) {		
 		return this.isTokenSupported(SUPPORTEDTOKENS, tokenidentificationstring);
@@ -144,8 +144,8 @@ public class EnhancedEIDProfile extends EIDProfile {
 	    return clone;
     }
 
-	/* 
-	 * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#getLatestVersion()
+	/**
+	 * @see org.ejbca.core.model.hardtoken.profiles.HardTokenProfile#getLatestVersion()
 	 */
 	public float getLatestVersion() {
 	  return LATEST_VERSION;
@@ -180,7 +180,7 @@ public class EnhancedEIDProfile extends EIDProfile {
 				data.put(CERTWRITABLE, certWritable);				
 			}
 			
-			data.put(VERSION, new Float(LATEST_VERSION));
+			data.put(VERSION, Float.valueOf(LATEST_VERSION));
 		}   
 	}
 
